re PR fortran/24545 (gfortran bug regarding interface block with named END INTERFACE statements)

PR fortran/24545
* interface.c (gfc_match_end_interface): Fix typo in INTERFACE_USER_OP case.

From-SVN: r105953